feat (frontend): Error handling, public page routing - add ServiceResult for better error and response handling from api calls - added public layout to app.razor for alt routing to authorized pages - add ErrorResponse to match error format from backend - add validation texts to create inv page - new landing page

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,10 @@ newman/
 *.html
 *.xml
 *.json
+
+# # Tailwind & Docker
+# .npm/
+# .cache/
+# *.log
+# tailwind/output.css  # if it exists
+# node_modules/
