feat: new landing page, auth forms, shared components, and frontend setup - Added new landing page and updated login page - Created modular register page based on user type - Introduced shared components: Button, Footer, LandingFeatures - Added initial Udraw SVG illustrations - Set up PNPM, NVM, and Node for frontend dev on Windows host - Updated .gitignore to exclude node_modules and other build artifacts - Planned separate navbars for authenticated and public users

--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,9 @@ newman/
 *.xml
 *.json
 
-# # Tailwind & Docker
-# .npm/
-# .cache/
-# *.log
-# tailwind/output.css  # if it exists
-# node_modules/
+# Tailwind & Docker
+.npm/
+.cache/
+*.log
+node_modules/
+dist/
