--- a/apps/logistics-backend/kong/kong.yml
+++ b/apps/logistics-backend/kong/kong.yml
@@ -32,6 +32,7 @@ services:
                 - GET
                 - POST
                 - PUT
+                - PATCH
                 - DELETE
                 - OPTIONS
               headers:
