feat(backend): docker-compose and Caddy setup - Fixed exposed ports in backend container - Added healthchecks and restart policies for each container - Added Caddy container for TLS/web server

--- a/apps/logistics-backend/.env.docker
+++ b/apps/logistics-backend/.env.docker
@@ -1,7 +1,7 @@
 # .env.docker
 
 # Public facing Kong url
-PUBLIC_API_BASE_URL=http://localhost:8000/api
+PUBLIC_API_BASE_URL=https://api.fastabiz.co.ke:8000/api
 # API Base URL used *within* the Docker network
 INTERNAL_API_BASE_URL=http://backend:8080
 
