--- a/apps/logistics-backend/docs/swagger.yaml
+++ b/apps/logistics-backend/docs/swagger.yaml
@@ -149,7 +149,7 @@ definitions:
         description: “Bucket/Single”
         type: string
       price:
-        type: number
+        $ref: '#/definitions/money.Money'
       slug:
         type: string
       stock:
@@ -196,7 +196,7 @@ definitions:
         description: “Bucket/Single”
         type: string
       price:
-        type: number
+        $ref: '#/definitions/money.Money'
       slug:
         description: product slug
         type: string
@@ -219,7 +219,7 @@ definitions:
       packaging:
         type: string
       price:
-        type: number
+        $ref: '#/definitions/money.Money'
       unit:
         type: string
     type: object
@@ -235,6 +235,64 @@ definitions:
         items:
           $ref: '#/definitions/inventory.InventorySummary'
         type: array
+    type: object
+  invite.CreateInviteRequest:
+    properties:
+      email:
+        type: string
+      expires_at:
+        type: string
+      id:
+        type: string
+      invited_by:
+        type: string
+      role:
+        $ref: '#/definitions/invite.Role'
+      token:
+        type: string
+    required:
+    - email
+    - expires_at
+    - id
+    - invited_by
+    - role
+    - token
+    type: object
+  invite.Invite:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      expires_at:
+        type: string
+      id:
+        type: string
+      invited_by:
+        type: string
+      role:
+        $ref: '#/definitions/invite.Role'
+      token:
+        type: string
+    type: object
+  invite.Role:
+    enum:
+    - admin
+    - driver
+    - customer
+    - guest
+    type: string
+    x-enum-varnames:
+    - Admin
+    - Driver
+    - Customer
+    - Guest
+  money.Money:
+    properties:
+      amount:
+        type: integer
+      currency:
+        type: string
     type: object
   notification.CreateNotificationRequest:
     properties:
@@ -361,7 +419,9 @@ definitions:
   payment.CreatePaymentRequest:
     properties:
       amount:
-        type: number
+        type: integer
+      currency:
+        type: string
       method:
         $ref: '#/definitions/payment.PaymentMethod'
       order_id:
@@ -372,7 +432,9 @@ definitions:
   payment.Payment:
     properties:
       amount:
-        type: number
+        type: integer
+      currency:
+        type: string
       id:
         type: string
       method:
@@ -459,11 +521,13 @@ definitions:
     - admin
     - driver
     - customer
+    - guest
     type: string
     x-enum-varnames:
     - Admin
     - Driver
     - Customer
+    - Guest
   user.UpdateDriverUserProfileRequest:
     properties:
       phone:
@@ -490,6 +554,8 @@ definitions:
         type: string
       id:
         type: string
+      last_login:
+        type: string
       must_change_password:
         type: boolean
       phone:
@@ -499,9 +565,23 @@ definitions:
       slug:
         description: adminSlug used in public route
         type: string
+      status:
+        $ref: '#/definitions/user.UserStatus'
       updated_at:
         type: string
     type: object
+  user.UserStatus:
+    enum:
+    - active
+    - inactive
+    - suspended
+    - pending
+    type: string
+    x-enum-varnames:
+    - Active
+    - Inactive
+    - Suspended
+    - Pending
 host: localhost:8000
 info:
   contact: {}
@@ -1203,6 +1283,112 @@ paths:
       summary: Create a new inventory
       tags:
       - inventories
+  /invites/{id}:
+    delete:
+      description: Delete an invite by ID
+      parameters:
+      - description: Invite ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid invite ID
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Delete an invite
+      tags:
+      - Invites
+  /invites/all_invites:
+    get:
+      description: Get all invites that are pending
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/invite.Invite'
+            type: array
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: List all pending invites
+      tags:
+      - Invites
+  /invites/by-token:
+    get:
+      description: Fetch an invite using a token
+      parameters:
+      - description: Invite token
+        in: query
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/invite.Invite'
+        "400":
+          description: Invalid Token
+          schema:
+            type: string
+        "404":
+          description: Invite not found
+          schema:
+            type: string
+      summary: Get invite by token
+      tags:
+      - Invites
+  /invites/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new invite for a user
+      parameters:
+      - description: Invite payload
+        in: body
+        name: invite
+        required: true
+        schema:
+          $ref: '#/definitions/invite.CreateInviteRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Create a new invite
+      tags:
+      - Invites
   /notifications/{id}:
     get:
       description: Retrieve a notification by their ID
