PostGIS integration, spatial queries, and cleanup across Order, Driver, and Delivery domains
Pull backend refactors and spatial feature updates for PostGIS migration:

– Migrate Docker DB image from postgres:15 → postgis/postgis:15-3.5
  Enables geometry and spatial indexing support across drivers, orders, and deliveries.

– Introduce PostGIS point fields:
  • Driver: current_location moved from string → geometry(Point, 4326)
  • Order: pickup_point and delivery_point migrated from float64 lat/lng → PostGIS points
  • Use ST_SetSRID(ST_MakePoint(lng, lat), 4326) when creating order records
  • WKT (Well-Known Text) used for JSON marshaling of geometric values

– Swagger docs (WIP)
  • Encountered swag parsing errors on PostGIS struct fields (unsupported postgis.PointS)
  • Temporarily excluded those fields to unblock build and geometry handling

– Removed redundant handler logic:
  • Dropped CreateDelivery handler — logic handled by AcceptDelivery
  • Dropped CreateDriver handler — now handled via user registration path invoking driver repo

– OrderService refactors:
  • Removed UpdateOrderAndDriver (redundant cross-domain mutation)
  • Added new OrderAssignment method:
    - Assigns nearest available driver using PostGIS spatial distance queries
    - Prioritizes unassigned orders and sorts by earliest creation time
    - Falls back to load-balanced assignment when system under low driver load
    - Includes future TODO for route clustering optimization to minimize redundant trips

– Repository updates:
  • OrderRepo: added GetPickupPoint, GetDeliveryPoint
  • DriverRepo: added GetNearestDriver, ListAvailableDrivers
  • DeliveryRepo: added ListByStatus (filters 'assigned', 'picked_up')
  • Implemented pq array parameter support for flexible status filtering

– Migrations:
  • Enable PostGIS extension (CREATE EXTENSION IF NOT EXISTS postgis;)
  • Dropped legacy lat/lng columns from orders
  • Added geometry(Point, 4326) columns for pickup and delivery
  • Created GI

--- a/apps/logistics-backend/docker-compose.yml
+++ b/apps/logistics-backend/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:15
+    image: postgis/postgis:15-3.5  # Postgres 15 with PostGIS 3.5
     container_name: logistics_postgres
     environment:
       POSTGRES_USER: admin
