feat (frontend): models namespace changes and new invoice, payment & checkout pages - new invoice table for admins, checkout for customers - add payment status, methods and form pages - changed all model namespaces to point to Models - correct namespace imports - add separate Invoice and PaymentRecord types to Payment model - update gitignore to include postman/newman html, xml and json output files - new appSettings.json to pass api base url into app build - WIP: InvoiceService with experimental funcs

--- a/.gitignore
+++ b/.gitignore
@@ -57,12 +57,12 @@ artifacts/
 # Thumbnails for images
 Thumbs.db
 
-# Ignore future Newman reports generated during CI
-postman/newman-report.json
+# Ignore only Postman/Newman output files
+postman/**/*.html
+postman/**/*.xml
+postman/**/*.json
 newman/
-*.html
-*.xml
-*.json
+
 
 # Tailwind, Docker & node_modules
 .npm/
